--- a/index.html
+++ b/index.html
@@ -6,9 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>moca_website</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <header>
+        <div class="container-fluid">
+            <div class="row">
+            <div class="today"></div>
+            <div class="hamburger"></div>
+        </div>
+        </div>
+    </header>
 </body>
 </html>
