--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="mid-nav row">
                 <div class="logo mid-nav-left">
                     <img src="./img/hdLogo1.png" alt="">
-                    <img src="./img/hdLogo2.png" alt="">
+                    <img class="logo-ch" src="./img/hdLogo2.png" alt="">
                 </div>
                 <div class="mid-nav-right">
                     <span>時間票價</span>
@@ -175,7 +175,163 @@
                 </div>
             </div>
         </div>
+        <div class="container-fluid about">
+            <div class="row ab-row1">
+                <div class="ab-picL">
+                    <img src="https://www.mocataipei.org.tw/upload/2019_01_223/20190122161002ogzca9KPC1.jpg" alt="">
+                </div>
+                <div class="ab-text">
+                    <p class="t36-500">DISCOVER MOCA</p>
+                    <p>探索當代藝術館的特色</p>
+                    <div class="moca">
+                        <img src="https://www.mocataipei.org.tw/upload/2018_12_071/20181207154209feqndksKw1.jpg" alt="">
+                    </div>
+                </div>
+                <div class="ab-picS">
+                    <img src="https://www.mocataipei.org.tw/upload/2019_01_223/20190122162559g1i5qxm1g1.jpg" alt="">
+                </div>
+            </div>
+            <div class="row">
+                <div class="ab-picS">
+                    <img src="https://www.mocataipei.org.tw/upload/2019_01_223/20190122170827jvfig0BFk1.jpg" alt="">
+                </div>
+                <div class="ab-text">
+                    <p>歷史也能變身現代舞台</p>
+                    <p>帶著懷舊的味道，卻成為台灣當代藝術的櫥窗，除了提供良好的平台，更致力於開拓美感...</p>
+                    <p>Read More</p>
+                </div>
+                <div class="ab-picL">
+                    <img src="https://www.mocataipei.org.tw/upload/2019_01_223/20190122171259f54m26L781.jpg" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid">
+            <div class="row mocard">
+                <div class="mocard-left">
+                    <img src="https://www.mocataipei.org.tw/upload/2019_04_243/20190424181814ib6xjdtV51.png" alt="">
+                </div>
+                <div class="mocard-right">
+                    <h6>HAVE A MOCArd</h6>
+                    <p>擁有魔卡MOCArd 永遠享受MOCA
+                        在白晝與星辰中，見證藝術的永恆不滅。</p>
+                    <a href="">
+                        <p>馬上擁有魔卡</p>
+                    </a>
+                </div>
+            </div>
+        </div>
     </main>
+    <footer>
+        <div class="container-fluid footer">
+            <div class="row footer-logo">
+                <div class="arrow"></div>
+                <div class="f-logo">
+                    <img src="https://www.mocataipei.org.tw/assets/img/ftLogo.png" alt="">
+                </div>
+            </div>
+            <ul>
+                <li>
+                    <div class="t22">
+                        About
+                    </div>
+                    <a href="">
+                        認識當代
+                    </a>
+                    <a href="">
+                        館長介紹
+                    </a>
+                    <a href="">
+                        歷史沿革
+                    </a>
+                </li>
+                <li>
+                    <div class="t22">Exhibition</div>
+                    <a href="">
+                        當期展覽
+                    </a>
+                    <a href="">
+                        新展預告
+                    </a>
+                    <a href="">
+                        歷年展覽
+                    </a>
+                    <a href="">
+                        VR線上展覽
+                    </a>
+                </li>
+                <li>
+                    <div class="t22">
+                        Visit
+                    </div>
+                    <a href="">
+                        時間票價
+                    </a>
+                    <a href="">
+                        導覽服務
+                    </a>
+                    <a href="">
+                        交通資訊
+                    </a>
+                    <a href="">
+                        MoCA on Air
+                    </a>
+                </li>
+                <li>
+                    <div class="t22">
+                        Service
+                    </div>
+                    <a href="">
+                        會員中心
+                    </a>
+                    <a href="">
+                        申請專區
+                    </a>
+                </li>
+                <li>
+                    <div class="t22">
+                        Support
+                    </div>
+                    <a href="">
+                        贊助計畫
+                    </a>
+                </li>
+            </ul>
+            <ul class="footerr2">
+                <li>
+                    <div class="t22">Open Hours</div>
+                    <a href="">每日開放時間 10AM - 6PM</a>
+                    <a href="">每周一休館</a>
+                </li>
+                <li>
+                    <div class="t22">Newsletter</div>
+                    <a href="">
+                        加入當代會員</a>
+                    <a href="">
+                        立即收到最新MOCA魔卡報報
+                    </a>
+                </li>
+                <li>
+                    <div class="t22">Join Us</div>
+                    <a href=""></a>
+                    <a href=""></a>
+                    <a href=""></a>
+                </li>
+            </ul>
+            <div class="row policy">
+                <div class="footer-l">
+                    <p>台北市大同區103長安西路39號 NO.39 Chang-An West Road Taipei, Taiwan 103</p>
+                    <p><span>tel </span>+886 2-2552-3721 <span>Tax </span>+886 2-2559-3874</p>
+                    <p><span>Mail </span>services@mocataipei.org.tw</p>
+                </div>
+                <div class="footer-r">
+                    <p>Privacy Policy / Copyright Notice</p>
+                    <div class="co-logo">
+                        <img src="https://www.mocataipei.org.tw/upload/2018_12_201/20181220171600zgt2sifn62.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 <script>
 
